--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,27 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>NANA'S STORE</header>
+   <br> <h1 align="center">Método de Pago</h1> <br>
+    <main>
+      <div class="container">
+        <h2 align="center">Antes  de continuar con tu pago...</h2>
+        <p align="center">Es necesario validar tu tarjeta de crédito/débito, para ello coloca los siguientes datos:</p>
+        <div class="form">
+          <div class="cardValidation" align="center">
+            <label for="cardName">Nombre del Tarjetahabiente</label>
+            <input class="cardName" type="text" name="Nombre" id="cardName">
+            <label for="cardNumber">Número de tarjeta</label>
+            <input class="cardNumber" type="text" name="Tarjeta" id="cardNumber">
+          </div>
+
+          <br><div class="containerB" align="center"><br>
+            <button id="button">VALIDAR</button>
+          </div>
+
+        </div>
+      </div>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
