--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
-    <title>Tarjeta de crédito válida</title>
+    <title>Método de Pago</title>
     <link rel="stylesheet" href="style.css" />
+    <header><img src="img/aaa.png"></header>
   </head>
+
+
   <body>
-    <header>NANA'S STORE</header>
-   <br> <h1 align="center">Método de Pago</h1> <br>
+   
     <main>
       <div class="container">
-        <h2 align="center">Antes  de continuar con tu pago...</h2>
+        <h2 align="center">Antes de continuar con tu pago...</h2>
         <p align="center">Es necesario validar tu tarjeta de crédito/débito, para ello coloca los siguientes datos:</p>
         <div class="form">
-          <div class="cardValidation" align="center">
-            <label for="cardName">Nombre del Tarjetahabiente</label>
-            <input class="cardName" type="text" name="Nombre" id="cardName">
-            <label for="cardNumber">Número de tarjeta</label>
-            <input class="cardNumber" type="text" name="Tarjeta" id="cardNumber">
-          </div>
+
+          <div class="cardValidation" align="left">
+            <label for="cardName">Nombre del Titular: </label>
+            <br><input class="cardName" type="text" name="Nombre" id="cardName"><br>
+
+            <br><label for="cardNumber">Número de Tarjeta: </label>
+            <br><input class="cardNumber" type="text" name="Tarjeta" id="cardNumber" minlength="16" 
+            maxlength="16"pattern="[0-9]+"><br>
+          </div> </div>
 
           <br><div class="containerB" align="center"><br>
             <button id="button">VALIDAR</button>
-          </div>
-
         </div>
       </div>
+      <div id="div1"></div>
     </main>
+
+
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
