--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,13 @@
          <input type="text" id="cardLastName" name="lastname">
           <br>
          <p>Número de Tarjeta:</p>
-          <input id="cardNumber" maxlength="16" type="text" required>
+          <input type="text" id="cardNumber" maxlength="16" pattern="^[0-9]*$" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
         
            <div class="boton" align="center">
            <br><button type="submit" class="btnValidar" id="btnValidar">VALIDAR</button><br>    
            
           <p id="mensaje1" align="center"></p>
           <p id="mensaje2" align="center"></p>
-
 
       </div>  
     </div>
