--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 
     <main>
       <div class="container-compra">
-        <h2 align="center">Detalles de tu compra</h2>
+        <h2 align="center">Detalles de la compra</h2>
         <div align="center"><img src="img/logop.png"></div>
         <p align="center">ORDER #0001 FOR DIANA AP</p>
         <p align="center">THURSDAY, JULY 14, 2022</p>
